--- a/css/index.css
+++ b/css/index.css
@@ -5,19 +5,21 @@
 
 /* Background */
 .main{
-    width: 100%;
+    /* width: 100%; */
     background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
+    position: relative;
 }
 
 /* Navbar */
 
 .navbar{
-    width: 1200px;
+    width: 100%;
+    background-color: #000;
     height: 75px;
-    padding-top: 2%;
+    padding-top: 0.5%;
     margin: auto;
 }
 
@@ -31,7 +33,7 @@
     color: #ff7200;
     font-size: 42px;
     font-family: Arial;
-    padding-left: 20px;
+    padding-left: 75px;
     float: left;
     margin-top: 5px
 }
@@ -51,7 +53,7 @@ ul{
 
 ul li{
     list-style: none;
-    margin-left: 62px;
+    margin-left: 90px;
     margin-top: 27px;
     font-size: 17px;
 }
@@ -68,13 +70,13 @@ ul li a:hover{
     color: #ff7200;
 }
 
-.search{
+.search {
     width: 330px;
     float: left;
-    margin-left: 270px;
+    margin-left: 550px;
 }
 
-.srch{
+.srch {
     font-family: 'Times New Roman';
     width: 200px;
     height: 40px;
@@ -118,9 +120,10 @@ ul li a:hover{
 /* Content */
 
 .content{
-    width: 1200px;
+    width: 100%;
     height: auto;
     margin: auto;
+    padding-left: 100px;
     color: #fff;
     position: relative;
 }
@@ -167,7 +170,7 @@ ul li a:hover{
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
     position: absolute;
     top: -20px;
-    left: 870px;
+    right: 250px;
     transform: translate(0%,-5%);
     border-radius: 10px;
     padding: 25px;
