--- a/css/index.css
+++ b/css/index.css
@@ -1,264 +1,56 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-/* Background */
-.main{
-    /* width: 100%; */
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
+body{
+    background-image: url("bg.gif");
     background-size: cover;
-    height: 100vh;
-    position: relative;
 }
 
-/* Navbar */
+/* Navigation Bar */
 
-.navbar{
-    width: 100%;
-    background-color: #000;
-    height: 75px;
-    padding-top: 0.5%;
-    margin: auto;
+.navbar {
+    padding: 0 0 5rem;
 }
-
-.icon{
-    width: 200px;
-    float: left;
-    height: 70px;
-}
-
-.logo{
-    color: #ff7200;
-    font-size: 42px;
-    font-family: Arial;
-    padding-left: 75px;
-    float: left;
-    margin-top: 5px
-}
-
-.menu{
-    width: 400px;
-    float: left;
-    height: 75px;
-}
-
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li{
-    list-style: none;
-    margin-left: 90px;
-    margin-top: 27px;
-    font-size: 17px;
-}
-
-ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-family: Arial;
+  
+.navbar-brand {
+    font-size: 3rem;
     font-weight: bold;
-    transition: 0.4s ease-in-out;
+    padding: 0 15px;
+}
+  
+.nav-item {
+    padding: 20px 80px 0px 0;
+}
+  
+.nav-link {
+    font-size: 1.5rem;
+    font-family: "Montserrat-Light";
 }
 
-ul li a:hover{
-    color: #ff7200;
+.big-heading {
+    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 70px;
+    padding: 120px 0 0 50px;
 }
 
-.search {
-    width: 330px;
-    float: left;
-    margin-left: 550px;
+.dwn-btn{
+    padding: 20px 50px;
+    margin-left: 0px;
 }
 
-.srch {
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
+.btn:not(:disabled):not(.disabled) {
+    margin-left: 15px;
+    padding: 15px;
 }
 
-.l-btn{
-    width: 100px;
-    height: 40px;
-    background: #ff7200;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    transition: 0.2s ease;
-    cursor: pointer;
-}
-.l-btn:hover{
-    color: #000;
-}
-
-.l-btn:focus{
-    outline: none;
-}
-
-.srch:focus{
-    outline: none;
-}
-
-/* Content */
-
-.content{
-    width: 100%;
-    height: auto;
-    margin: auto;
-    padding-left: 100px;
-    color: #fff;
-    position: relative;
-}
-
-.content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-}
-
-.content h1{
-    font-family: 'Times New Roman';
-    font-size: 55px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-}
-
-.content .download-button {
-    margin-left: 1.5%;
-    font-family: sans-serif;
-    padding: 1.5% 2% 1.5% 2%;
-    font-size: large;
-    color: #fff;
-    background-color: #8f8f8f;
-    border-radius: 3px;
-}
-
-.content .btn-dark {
-    color: #fff;
-    background-color: #343a40;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 65px
-}
-
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    right: 250px;
-    transform: translate(0%,-5%);
-    border-radius: 10px;
-    padding: 25px;
-}
-
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #ff7200;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-}
-
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-
-.form input:focus{
-    outline: none;
-}
-
-::placeholder{
-    color: #fff;
-    font-family: Arial;
-}
-
-.form .l-btnn{
-    width: 240px;
-    height: 40px;
-    background: #ff7200;
+.user-btn{
     border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
 }
-.l-btnn:hover{
-    background: #fff;
-    color: #ff7200;
-}
-.l-btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
-}
-.form .link a{
-    text-decoration: none;
-    color: #ff7200;
-}
-.liw{
+
+.download-button{
     padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
 }
-.icons a{
-    text-decoration: none;
-    color: #fff;
-}
-.icons ion-icon{
-    color: #fff;
-    font-size: 30px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
-}
-.icons ion-icon:hover{
-    color: #ff7200;
+
+.nav-item .btn:not(:disabled):not(.disabled) {
+    margin-left: 15px;
+    padding: 15px;
+    padding-top: 0px;
 }
