--- a/savvy/src/Pages/LoginPage/LoginPage.css
+++ b/savvy/src/Pages/LoginPage/LoginPage.css
@@ -1,3 +1,99 @@
 body{
-    background-color: black;
+    background-color: white;
+    position: absolute;
+    width: 1100px;
+    height: 608px;
+    left: 100px;
+    top: 112px;
+}
+
+.login{
+    font-family: 'Mukta';
+    font-weight: 700;
+    font-size: 2.5rem;
+    line-height: 58px;
+}
+
+.form-comp{
+    position: absolute;
+    width: 329px;
+    height: 510px;
+    left: 100px;
+}
+
+.form-control{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 24px;
+    gap: 10px;
+    width: 329px;
+    height: 47px;
+    border: 1px solid #585858;
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.form-comp1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 0px;
+    gap: 8px;
+    width: 329px;
+    height: 150px;
+    left: 100px;
+    top: 210px;
+}
+
+.fg-pw{
+    width: 96px;
+    height: 20px;
+    font-family: 'Mukta';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 20px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+a{
+    color: #1D976C
+}
+
+.btn-primary{
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 35px;
+    color: #FFFFFF;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 130px;
+    gap: 10px;
+    width: 329px;
+    height: 55px;
+    background: linear-gradient(90deg, #1D976C 0%, #93F9B9 100%);
+    border-radius: 4px;
+    border: none;
+}
+
+.lg-img{
+    position: absolute;
+    width: 666px;
+    height: 492px;
+    left: 650px;
+}
+
+.quick-sg{
+    
 }
