--- a/savvy/src/Pages/RegistrationPage/RegistrationPage.css
+++ b/savvy/src/Pages/RegistrationPage/RegistrationPage.css
@@ -1,8 +1,8 @@
 body{
     background-color: white;
     position: absolute;
-    width: 1100px;
-    height: 608px;
+    width: auto;
+    height: auto;
     left: 100px;
     top: 50px;
 }
