--- a/savvy/src/Pages/Password/Password.css
+++ b/savvy/src/Pages/Password/Password.css
@@ -4,20 +4,23 @@ body{
     width: auto;
     height: auto;
     left: 100px;
-    top: 112px;
+    top: 15%;
 }
 
 .login{
     font-family: 'Mukta';
     font-weight: 700;
-    font-size: 2.5rem;
-    line-height: 58px;
+    font-size: 2.3rem;
+    line-height: 50px;
+    margin-bottom: 0;
+}
+
+.des{
+    margin-bottom: 15%;
 }
 
 .form-comp{
     position: absolute;
-    width: 329px;
-    height: 510px;
     left: 100px;
 }
 
@@ -28,8 +31,6 @@ body{
     align-items: center;
     padding: 10px 24px;
     gap: 10px;
-    width: 329px;
-    height: 47px;
     border: 1px solid #585858;
     border-radius: 4px;
     flex: none;
@@ -43,15 +44,11 @@ body{
     align-items: flex-end;
     padding: 0px;
     gap: 8px;
-    width: 329px;
-    height: 150px;
     left: 100px;
     top: 210px;
 }
 
 .fg-pw{
-    width: 96px;
-    height: 20px;
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 700;
@@ -69,19 +66,12 @@ a{
 .btn-primary{
     font-weight: 700;
     font-size: 19px;
-    line-height: 35px;
     color: #FFFFFF;
     flex: none;
-    order: 0;
-    flex-grow: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 10px 130px;
-    gap: 10px;
-    width: 329px;
-    height: 55px;
     background: linear-gradient(90deg, #1D976C 0%, #93F9B9 100%);
     border-radius: 4px;
     border: none;
@@ -89,7 +79,18 @@ a{
 
 .lg-img{
     position: absolute;
-    width: 666px;
-    height: 492px;
-    left: 650px;
+    left: 750px;
+    top: 20px;
+}
+
+.terms{
+    font-size: 0.9rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5% 0 5% 0;
+}
+
+span{
+    color: red;
 }
