Login Page is Done

--- a/savvy/src/Pages/LoginPage/LoginPage.css
+++ b/savvy/src/Pages/LoginPage/LoginPage.css
@@ -1,27 +1,30 @@
-body{
-    background-color: white;
-    position: absolute;
-    width: auto;
-    height: auto;
-    left: 100px;
-    top: 112px;
+
+.form-img{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+    padding: 0 100px;
 }
 
 .login{
     font-family: 'Mukta';
     font-weight: 700;
     font-size: 2.5rem;
-    line-height: 58px;
+    margin: 0;
+
 }
 
-.form-comp{
-    position: absolute;
-    width: 329px;
-    height: 510px;
-    left: 100px;
+
+.form-control::placeholder{
+    color: #aeaeae;
 }
+
 
 .form-control{
+   outline: none;
+
+    color: #585858;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
@@ -37,10 +40,19 @@ body{
     flex-grow: 0;
 }
 
+.form-comp{
+    height: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
 .form-comp1{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: space-between;
     padding: 0px;
     gap: 8px;
     width: 329px;
@@ -60,11 +72,15 @@ body{
     flex: none;
     order: 1;
     flex-grow: 0;
+} 
+
+.forget-pass  a , #registerlink{
+    color: #CA706A;
+    text-decoration: none;
+    font-weight: 700;
 }
 
-a{
-    color: #1D976C
-}
+
 
 .btn-primary{
     font-weight: 700;
@@ -82,14 +98,9 @@ a{
     gap: 10px;
     width: 329px;
     height: 55px;
-    background: linear-gradient(90deg, #1D976C 0%, #93F9B9 100%);
+    background: linear-gradient(90deg, #D31027 0%, #EA384D 100%);
     border-radius: 4px;
     border: none;
 }
 
-.lg-img{
-    position: absolute;
-    width: 666px;
-    height: 492px;
-    left: 650px;
-}
+
