--- a/savvy/src/Pages/LoginPage/LoginPage.css
+++ b/savvy/src/Pages/LoginPage/LoginPage.css
@@ -103,4 +103,17 @@
     border: none;
 }
 
+@media only screen and (max-width: 600px) {
+
+    .form-img{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 0 0;
+    }
+
+    .lg-img{
+        display: none;
+    }
+  }
 
