--- a/savvy/src/Pages/LoginPage/LoginPage.css
+++ b/savvy/src/Pages/LoginPage/LoginPage.css
@@ -96,7 +96,7 @@
     align-items: center;
     padding: 10px 130px;
     gap: 10px;
-    width: 329px;
+    width: 100%;
     height: 55px;
     background: linear-gradient(90deg, #D31027 0%, #EA384D 100%);
     border-radius: 4px;
@@ -110,6 +110,10 @@
         left: 50%;
         transform: translateX(-50%);
         padding: 0 0;
+    }
+
+    .form-comp{
+        width: 100%;
     }
 
     .lg-img{
