--- a/savvy/src/Components/Navbar/Navbar.css
+++ b/savvy/src/Components/Navbar/Navbar.css
@@ -3,6 +3,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 64px;
+    height: 8vh;
+    margin-bottom: 10px;
+
 }
 
 .logo {
@@ -10,7 +13,7 @@
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 32px;
     line-height: 70px;
     color: #EA384D;
 }
@@ -22,7 +25,7 @@
 }
 
 .nav-items>*:not(:last-child) {
-    margin-right: 24px;
+    margin-right: 18px;
 }
 
 .nav-items>* {
