--- a/savvy/src/Pages/LoginPage/LoginPage.css
+++ b/savvy/src/Pages/LoginPage/LoginPage.css
@@ -80,6 +80,12 @@
     font-weight: 700;
 }
 
+#registerlink > * {
+    text-decoration: none;
+    color: #CA706A;
+    
+}
+
 
 
 .btn-primary{
@@ -101,6 +107,11 @@
     background: linear-gradient(90deg, #D31027 0%, #EA384D 100%);
     border-radius: 4px;
     border: none;
+}
+
+.btn-primary > * {
+    text-decoration: none;
+    color: white;
 }
 
 @media only screen and (max-width: 600px) {
