--- a/savvy/src/Pages/HomePage/HomePage.css
+++ b/savvy/src/Pages/HomePage/HomePage.css
@@ -281,15 +281,15 @@
 }
 
 
-/*Footer*/
-body {
-    line-height: 1.5;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.Footer{
+    justify-content: flex-start;
+    height: fit-content;
 }
 
 .footer {
